--- a/MicroTest.Api/Dockerfile
+++ b/MicroTest.Api/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/core/sdk:2.2 AS build
+FROM mcr.microsoft.com/dotnet/core/sdk:3.0.100-preview5 AS build
 WORKDIR /app
 
 #copy csproj and restore as distinct layers
@@ -12,7 +12,7 @@ COPY . ./MicroTest.Api/
 WORKDIR /app/MicroTest.Api
 RUN dotnet publish -c Release -o out
 
-FROM mcr.microsoft.com/dotnet/core/aspnet:2.2 AS runtime
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.0.100-preview5 AS runtime
 WORKDIR /app/MicroTest.Api
 COPY --from=build /app/MicroTest.Api/out ./
 ENTRYPOINT [ "dotnet", "MicroTest.Api.dll" ]
