fixes to get this running in containers.

--- a/MicroTest.FileApi/appsettings.json
+++ b/MicroTest.FileApi/appsettings.json
@@ -10,8 +10,18 @@
     "ApiName": "FileSystemApi",
     "ApiVersion": 1,
     "HostName": "LT3040301",
-    "ApiRootUrl": "http://localhost:10828/api/",
-    "SwaggerUrl": "http://localhost:10828/swagger/"
+    "ApiRootUrl": "http://localhost:5000/api/",
+    "SwaggerUrl": "http://localhost:5000/swagger/"
+  },
+  "ServiceDescription": {
+    "Name": "FileSystemAPI",
+    "Version": 1,
+    "Description": "An API that provides JSON representations of directories and files, and their associated NTFS permissions.",
+    "Url": "http://localhost:18294",
+    "Endpoint": "api",
+    "Swagger": "swagger",
+    "ServiceCheck": "api/servicecheck",
+    "Environment": "LOC"
   },
   "AllowedHosts": "*"
 }
